# Aetherion

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CODING_STANDARDS.md  Makefile  README.md  codecov.yml  f16_s12_sim.csv  f16_s13p2_sim.csv  f16_s13p3_sim.csv  f16_s13p4_sim.csv  get_project_name.py  out.txt  requirements.txt
src/: CMakeLists.txt  main.cpp
src/Coordinate/: CMakeLists.txt  ECEFtoGeodetic.cpp  InertialToLocal.cpp
src/Examples/: CMakeLists.txt
src/Examples/CircleEquatorDateLine/: CMakeLists.txt  CircleEquatorDateLine.cpp
src/Examples/CircleNorthPole/: CMakeLists.txt  CircleNorthPole.cpp
src/Examples/DraglessSphere/: CMakeLists.txt  DraglessSphere.cpp  main.cpp
src/Examples/DroppedSphere2DWindShear/: CMakeLists.txt  DroppedSphere2DWindShear.cpp
src/Examples/DroppedSphereSteadyWind/: CMakeLists.txt  DroppedSphereSteadyWind.cpp
src/Examples/EastwardCannonball/: CMakeLists.txt  EastwardCannonball.cpp
src/Examples/F16AirspeedChange/: CMakeLists.txt  F16AirspeedChange.cpp
src/Examples/F16AltitudeChange/: CMakeLists.txt  F16AltitudeChange.cpp
src/Examples/F16HeadingChange/: CMakeLists.txt  F16HeadingChange.cpp
src/Examples/F16LateralSideStep/: CMakeLists.txt  F16LateralSideStep.cpp
src/Examples/F16SteadyFlight/: CMakeLists.txt  F16SteadyFlight.cpp
src/Examples/F16SupersonicTrim/: CMakeLists.txt  F16SupersonicTrim.cpp
src/Examples/NorthwardCannonball/: CMakeLists.txt  NorthwardCannonball.cpp
src/Examples/SphereWithAtmosphericDrag/: CMakeLists.txt  SphereWithAtmosphericDrag.cpp
src/Examples/TumblingBrickNoDamping/: CMakeLists.txt  TumblingBrickNoDamping.cpp
src/Examples/TumblingBrickWithDamping/: CMakeLists.txt  TumblingBrickWithDamping.cpp
src/Examples/TwoStageRocket/: CMakeLists.txt  RocketStageModel.cpp  TwoStageRocket.cpp  TwoStageRocketSimulator.cpp
src/FMU/: CMakeLists.txt
src/FMU/DraglessSphere/: DraglessSphere.cpp
src/FMU/F16Plant/: CMakeLists.txt  F16PlantFMU.cpp  test_f16plant.py
src/FMU/FeedThrough/: FeedThrough.cpp
src/FMU/TabulatedSignal/: TabulatedSignal.cpp
src/FlightDynamics/: CMakeLists.txt  JsonConfigNlohmannAdapter.cpp  JsonConfig_NlohmannAdapter.cpp  Jsonconfig.cpp
src/FlightDynamics/Serialization/: AerodynamicParametersJson.cpp  FlightSimulationConfigJson.cpp  InertialParametersJson.cpp  InitialPoseWGS84_NEDJson.cpp  InitialRotationAboutBodyAxesJson.cpp  InitialVelocityNEDJson.cpp  JsonConfigNlohmannAdapter.cpp  Jsonconfig.cpp  LoadFlightSimulationConfigFromFile.cpp  PoseWGS84_NEDJson.cpp  SimulationConfigJson.cpp  SimulationParametersJson.cpp  VelocityNEDJson.cpp
src/ODE/: CMakeLists.txt
src/Serialization/: AerodynamicParametersJson.cpp  BodyRatesJson.cpp  CMakeLists.txt  ConfigJson.cpp  GeodeticPoseNEDJson.cpp  InertialParametersJson.cpp  InitialRotationAboutBodyAxesJson.cpp  JsonConfigNlohmannAdapter.cpp  LoadConfig.cpp  LoadConfigFromFile.cpp  LoadConfigFromString.cpp  LoadSimulationConfigFromFile.cpp  PoseWGS84_NEDJson.cpp  RotationRateAboutBodyAxesJson.cpp  SimulationConfigJson.cpp  SimulationParametersJson.cpp  VelocityNEDJson.cpp
src/Serialization/DAVEML/: CMakeLists.txt  DAVEMLAeroModel.cpp  DAVEMLControlModel.cpp  DAVEMLReader.cpp  LoadInertiaFromDAVEML.cpp
src/Serialization/Json/: AerodynamicParameters.cpp  BodyRates.cpp  Config.cpp  ConfigNlohmannAdapter.cpp  GeodeticPoseNED.cpp  InertialParameters.cpp  VelocityNED.cpp
src/Simulation/: Application.cpp  ArgumentParser.cpp  CMakeLists.txt  Config.cpp  ISimulator.cpp  Log.cpp  MakeSnapshot1.cpp  main.cpp
test/: CMakeLists.txt  test_cppad.cpp  test_libode.cpp
tests/: CMakeLists.txt  test_cppad.cpp  test_libode.cpp
tests/Aerodynamics/: CMakeLists.txt  test_AerodynamicAngles.cpp  test_AerodynamicForces.cpp  test_AerodynamicMoments.cpp  test_AerodynamicWrench.cpp  test_MachNumber.cpp
tests/Coordinate/: CMakeLists.txt  test_ECEFtoECI.cpp  test_ECEFtoGeodetic.cpp  test_ECItoNED.cpp  test_GeodeticToECEF.cpp  test_InitialStateCalculations.cpp  test_Math.cpp  test_NEDtoECEFtoECI.cpp  test_QuaterniontoNED.cpp  test_RandomRoundTripConversion.cpp  test_coordinate.cpp  test_inertial_to_local.cpp  test_round_trip_conversion.cpp
tests/Environment/: CMakeLists.txt  test_GravitationalWrench.cpp  test_atmosphere.cpp  test_gravity.cpp  test_wind_geometry.cpp
tests/FlightDynamics/: CMakeLists.txt  test_BuildInitialStateVector.cpp  test_GravityPolicies.cpp  test_InitialPoseFromJsonString.cpp  test_JsonConfig.cpp  test_MassPropulsionAeroPolicies.cpp  test_TrimSolver.cpp  test_WindModels.cpp
tests/ODE/: CMakeLists.txt  test_Concepts.cpp  test_Newton.cpp  test_RadauIIA_SE3.cpp  test_SE3.cpp  test_SO3.cpp  test_Scalar.cpp  test_StagePack.cpp
tests/RigidBody/: CMakeLists.txt  test_AerodynamicWrench.cpp  test_Config.cpp  test_ConvergenceOrder.cpp  test_GravitationalWrench.cpp  test_SE3StateInit.cpp  test_SixDofStepper.cpp  test_SpatialInertiaSignConvention.cpp
tests/Serialization/: CMakeLists.txt  test_AerodynamicParametersJson.cpp  test_BodyRatesJson.cpp  test_ConfigJson.cpp  test_DAVEMLAeroModel.cpp  test_DAVEMLControlModel.cpp  test_DAVEMLPropModel.cpp  test_DAVEMLReader.cpp  test_GeodeticPoseNEDJson.cpp  test_InertialParametersJson.cpp  test_InitialRotationAboutBodyAxes.cpp  test_JsonConfig.cpp  test_LoadConfig.cpp  test_LoadConfigFromFile.cpp  test_LoadConfigFromString.cpp  test_LoadSimulationConfigFromFile.cpp  test_PoseWGS84_NEDJson.cpp  test_RotationRateAboutBodyAxesJson.cpp  test_SimulationConfigJson.cpp  test_SimulationParametersJson.cpp  test_VelocityNEDJson.cpp
tests/Simulation/: CMakeLists.txt  test_Application.cpp  test_Config.cpp  test_ISimulator.cpp  test_Snapshot1.cpp
tests/Spatial/: CMakeLists.txt  test_Adjoint.cpp  test_CrossForce.cpp  test_CrossMotion.cpp  test_Inertia.cpp  test_Momentum.cpp  test_Power.cpp  test_Skew.cpp  test_Transform.cpp  test_WrenchOps.cpp
tests/ThirdPartyIntegration/: CMakeLists.txt  test_cppad.cpp  test_eigen.cpp  test_libode.cpp  test_nlohmann_json.cpp
tests/Utility/: NASACSVNormalize.h  NASACSVReader.h  csv_reader.h  nasa_csv.h  parse_utils.h  string_utils.h  table.h
(+397 files in other folders)
