# ------------------------------------------------------------------------------
# Project: Aetherion
# Copyright (c) 2025-2026, Onur Tuncer, PhD, Istanbul Technical University
#
# SPDX-License-Identifier: MIT
# License-Filename: LICENSE
# ------------------------------------------------------------------------------

# Forwards to module subdirectories to build example executables.
# Each subdirectory contains one or more examples.

add_subdirectory(DraglessSphere)
add_subdirectory(SphereWithAtmosphericDrag)
add_subdirectory(TumblingBrickNoDamping)
add_subdirectory(TumblingBrickWithDamping)
add_subdirectory(EastwardCannonball)
add_subdirectory(NorthwardCannonball)
add_subdirectory(DroppedSphereSteadyWind)
add_subdirectory(DroppedSphere2DWindShear)
add_subdirectory(F16SteadyFlight)

